# hx711cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h.in  double_to_string.cpp  double_to_string.h  hx711.cpp  hx711.h  main.cpp  moving_average.h  simple_kalman_filter.cpp  simple_kalman_filter.h  string_to_double.cpp  string_to_double.h
